// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClientTable /> should display spinner on delete request 1`] = `
<div>
  <table
    class="table table-hover"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          Client name
        </th>
        <th
          aria-label="Actions"
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="align-middle"
        >
          First
        </td>
        <td
          class="text-center"
        >
          <div
            class="spinner-border"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ClientTable /> should render info when there are no clients 1`] = `
<div>
  <p
    class="text-muted text-center"
  >
    There are no clients registered.
  </p>
</div>
`;

exports[`<ClientTable /> should render table of clients 1`] = `
<div>
  <table
    class="table table-hover"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          Client name
        </th>
        <th
          aria-label="Actions"
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="align-middle"
        >
          First
        </td>
        <td
          class="text-center"
        >
          <div
            class="btn-group"
            role="group"
          >
            <a
              class="btn btn-primary btn-sm"
              download=""
              href="/reforis/openvpn/api/clients/A1?address="
            >
              Download
            </a>
            <button
              class="btn btn-danger btn-sm"
              type="button"
            >
               
               
              Revoke
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          Second
        </td>
        <td
          class="text-center"
        >
          <div
            class="spinner-border"
            role="status"
          >
            <span
              class="sr-only"
            />
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          Third
        </td>
        <td
          class="text-center"
        >
          <div
            class="btn-group"
            role="group"
          >
            <a
              class="btn btn-primary btn-sm"
              download=""
              href="/reforis/openvpn/api/clients/B1?address="
            >
              Download
            </a>
            <button
              class="btn btn-danger btn-sm"
              type="button"
            >
               
               
              Revoke
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          Last
        </td>
        <td
          class="text-center"
        >
          <div
            class="btn-group"
            role="group"
          >
            <a
              class="btn btn-primary btn-sm"
              download=""
              href="/reforis/openvpn/api/clients/B2?address="
            >
              Download
            </a>
            <button
              class="btn btn-danger btn-sm"
              type="button"
            >
               
               
              Revoke
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
